my device driver worked

--- a/chr_dev/Makefile
+++ b/chr_dev/Makefile
@@ -8,4 +8,4 @@ all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules V=1
 
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M-$(PWD) clean V-1
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean V=1
