Implement echo client in user-space

--- a/echo/Makefile
+++ b/echo/Makefile
@@ -6,6 +6,14 @@ CC = gcc
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules V=1
+	make client
 
 clean:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean V=1
+	rm -rf client
+
+client: client.o
+	$(CC) -o $@ $<
+
+kecho.o: myheader.h
+client.o: myheader.h
